--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "com.example.pricedb"
+        applicationId "com.laksapedia.pricedb"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
