--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.pricedb">
+    package="com.laksapedia.pricedb">
 
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
@@ -19,7 +19,7 @@
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.laksapedia.pricedb.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
