--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,13 +2,13 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,3 +34,37 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Build Android release
+        # You may pin to the exact commit or the version.
+        # uses: sparkfabrik/android-build-action@02e36921259edb617c8395c1432b3164b3257e8e
+        uses: sparkfabrik/android-build-action@v1.0.0
+        with:
+          # Project path
+          project-path: android
+          # Output path of apk
+          output-path: # optional, default is output.apk
+          # Name of the gradle task to exec
+          gradle-task: assembleRelease # optional, default is assembleDebug
+          # Boolean to tell the Action to upload the .ipa to Browserstack App Live after the build.
+          browserstack-upload: # optional
+          # Browserstack username (required if browserstack-upload == true)
+          browserstack-username: # optional, default is
+          # Browserstack access key (required if browserstack-upload == true)
+          browserstack-access-key: # optional, default is
+
+      - name: Sign Android release
+        # You may pin to the exact commit or the version.
+        # uses: r0adkll/sign-android-release@f89394986064da3bdb260e4c7b8739c664fe8150
+        uses: r0adkll/sign-android-release@v1
+        with:
+          # The directory to find your release to sign
+          releaseDirectory: app/build/outputs/apk/release
+          # The key used to sign your release in base64 encoded format
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          # The key alias
+          alias: ${{ secrets.ALIAS }}
+          # The password to the keystore
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          # The password for the key
+          keyPassword: ${{ secrets.KEY_PASSWORD }} # optional
