--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/outputs/apk/release/output.apk
-          asset_name: # $tag
-          tag: # ${{ github.ref }}
+          asset_name: $tag
+          tag: ${{ github.ref }}
           overwrite: true
           body: release-$tag
