--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          asset_name: release.apk
+          asset_name: release-${{ github.ref }}.apk
           tag: ${{ github.ref }}
           overwrite: true
           body: # static text only
