--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          asset_name: release-${{ github.ref }}.apk
-          tag: ${{ github.ref }}
+          asset_name: release-${GITHUB_REF##*/}.apk
+          tag: ${GITHUB_REF##*/}
           overwrite: true
           body: # static text only
