--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,11 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
+      - name: Extract build version from tag
+        id: upc_version_tag
+        run: |
+          echo ::set-output name=UPC_VERSION::${GITHUB_REF:10}
+
       - name: Build Android release
         # You may pin to the exact commit or the version.
         # uses: sparkfabrik/android-build-action@02e36921259edb617c8395c1432b3164b3257e8e
@@ -74,7 +79,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          asset_name: release-${GITHUB_REF##*/}.apk
-          tag: ${GITHUB_REF##*/}
+          asset_name: release-${{ steps.upc_version_tag.outputs.UPC_VERSION }}.apk
+          tag: ${{ steps.upc_version_tag.outputs.UPC_VERSION }}
           overwrite: true
           body: # static text only
