--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,7 +54,7 @@ jobs:
 
       # the `.bak` is a OSX-specific fix, but output is unused
       - name: Update gradle version
-        run: sed -i '.bak' "s/versionName ./versionName ${{ steps.upc_version_tag.outputs.UPC_VERSION }}/g" ./app/build.gradle
+        run: sed -i '.bak' "s/versionName .*/versionName ${{ steps.upc_version_tag.outputs.UPC_VERSION }}/g" app/build.gradle
 
       - name: Build Android release
         # You may pin to the exact commit or the version.
